--- a/www/res/css/main.css
+++ b/www/res/css/main.css
@@ -1,16 +1,20 @@
 /* Main */
 
-html {
-	height: 100%;
-}
-  
+html,
 body {
+	height: 100%;
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
 	font-family: sans-serif;
 	font-size: 12pt;
 	background-color: #05050a;
-	margin: 0px;
-	padding: 0px;
 	color: white;
+}
+
+/* header and body reside in this wrapper, except footer */
+#wrapper {
+	min-height: calc(100vh - 65px);  /* 65px is height of footer */
 }
 
 pre {
@@ -114,7 +118,6 @@ a.game_menu {
 div#first_header {
 	background: url("../head_piece.png") repeat-x;
 	height: 96px;
-	width: 100%;
 	font-size: 120%;
 	font-weight: bold;
 	padding: 2px;
